# AutoContrast-pnm-OpenMp

./: .gitignore  CMakeLists.txt  hw5.cpp  main.cpp  tester.py
modules/: Channel.cpp  Channel.h  FilesOperation.cpp  FilesOperation.h  MyMath.cpp  MyMath.h  Pgp.cpp  Pgp.h  Ppm.cpp  Ppm.h  Reader.cpp  Reader.h  Timer.cpp  Timer.h
test/input/: images_1_.pnm  photo_2021-12-25_17-02-13.pnm  photo_2021-12-25_17-02-47.pnm
test/output/: photo_2021-12-25_17-02-47.pnm
